# smart-yardian

./: .gitattributes  .gitignore  LICENSE  PRODUCT.md  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish-release.yml
custom_components/smart_yardian/: __init__.py  button.py  config_flow.py  const.py  evapotranspiration.py  idokep_wind.py  irrigation.py  manager.py  manifest.json  models.py  ntfy.py  panel.py  planning.py  quota.py  rainfall.py  sensor.py  services.yaml  soil_moisture.py  storage.py  strings.json  switch.py  water_balance.py  weather.py  websocket.py
custom_components/smart_yardian/frontend/: smart-yardian-panel.js  smart-yardian-panel.js.map
custom_components/smart_yardian/translations/: en.json  hu.json
frontend/: index.html
frontend/src/: api.test.ts  api.ts  dev.ts  ids.ts  moisture.test.ts  moisture.ts  panel.test.ts  panel.ts  styles.ts  types.ts
tests/: conftest.py  test_forecast_cache.py  test_idokep_wind.py  test_irrigation.py  test_manager_ntfy.py  test_manager_smart_schedule.py  test_manager_timeout_scope.py  test_models.py  test_ntfy.py  test_openweather_client.py  test_panel_cache.py  test_planning.py  test_rainfall.py  test_soil_moisture.py  test_water_balance.py  test_weather.py
